--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Floki-Thorleifs/Medgongukonur#readme",
   "dependencies": {
+    "express-validator": "^5.3.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
